Bug 172560. Don't find visibility hidden/collapsed stuff in typeaheadfidn. r=kyle, sr=alecf