extensions/typeaheadfind/src/nsTypeAheadFind.cpp
@@ -64,6 +64,7 @@
 #include "nsIContent.h"
 #include "nsIFrame.h"
 #include "nsFrameTraversal.h"
+#include "nsIStyleContext.h"
 #include "nsIDOMDocument.h"
 #include "nsIDOMHTMLDocument.h"
 #include "nsIDOMHTMLElement.h"
@@ -2174,6 +2175,17 @@ nsTypeAheadFind::IsRangeVisible(nsIPresShell *aPresShell,
 
     return PR_FALSE;
   }
+
+  nsCOMPtr<nsIStyleContext> styleContext;
+  frame->GetStyleContext(getter_AddRefs(styleContext));
+  if (styleContext) {
+    const nsStyleVisibility* vis = 
+      (const nsStyleVisibility*)styleContext->GetStyleData(eStyleStruct_Visibility);
+    if (!vis || !vis->IsVisible()) {
+      return PR_FALSE;
+    }
+  }
+
 
   // ---- We have a frame ----
   if (!aMustBeInViewPort) {
